Added logic to get routes and times for given stop