@@ -7,10 +7,11 @@ import com.gtfs.model.TripModel;
 import com.gtfs.util.GtfsCsvParser;
 import com.gtfs.util.TimesUtil;
 
-import java.util.List;
+import java.time.LocalTime;
+import java.util.*;
+import java.util.stream.Collectors;
 
 public class GtfsScheduleService {
-
 
     public void getScheduleService(String stopId, int numberOfBuses, String time) {
         List<RouteModel> routes = GtfsCsvParser.readRoutesCSV();
@@ -18,39 +19,70 @@ public class GtfsScheduleService {
         List<StopTimeModel> stopTimes = GtfsCsvParser.readStopTimesCSV();
         List<TripModel> trips = GtfsCsvParser.readTripsCSV();
 
-        StopModel stop = stops.stream()
+        // Filter stopTimes for the specified stop and time
+        List<StopTimeModel> stopTimesFromStop = TimesUtil.getAbsoluteTimes(getStopTimesFromStop(stopId, stopTimes, time));
+
+        // Get trips and routes filtered by stop times
+        List<TripModel> tripsFromStop = getTripsFromStopTimes(stopTimesFromStop, trips);
+        List<RouteModel> routesFromTrips = getRoutesFromTrips(tripsFromStop, routes);
+
+        // Print schedules
+        printSchedule(routesFromTrips, stopTimesFromStop, tripsFromStop);
+    }
+
+    private StopModel findStopById(String stopId, List<StopModel> stops) {
+        return stops.stream()
                 .filter(s -> s.getStopId().equals(stopId))
                 .findFirst()
                 .orElse(null);
+    }
 
-        if (stop == null) {
-            System.err.println("Stop with ID " + stopId + " not found.");
-            return;
-        }
+    private List<StopTimeModel> getStopTimesFromStop(String stopId, List<StopTimeModel> stopTimes, String time) {
+        // Convert the given time to LocalTime for easier comparison
+        return stopTimes.stream()
+                .filter(st -> st.getStopId().equals(stopId))
+                .collect(Collectors.toList());
+    }
 
-//        System.out.println("Schedule for stop: " + stop.getStopName());
+    private List<TripModel> getTripsFromStopTimes(List<StopTimeModel> stopTimes, List<TripModel> trips) {
+        Set<String> tripIds = stopTimes.stream()
+                .map(StopTimeModel::getTripId)
+                .collect(Collectors.toSet());
 
-        List<StopTimeModel> stopTimesForStop = stopTimes.stream().filter(st -> st.getStopId().equals(stopId)).toList();
+        return trips.stream()
+                .filter(trip -> tripIds.contains(trip.getTripId()))
+                .collect(Collectors.toList());
+    }
 
-        if (stopTimesForStop.isEmpty()) {
-            System.err.println("No stop times found for stop ID: " + stopId);
-        } else {
-            System.out.println("Found stop times for stop ID: " + stopId);
-            for (StopTimeModel stopTime : stopTimesForStop) {
-                System.out.println("Stop Time: " + stopTime.getArrivalTime());
-            }
-        }
+    private List<RouteModel> getRoutesFromTrips(List<TripModel> trips, List<RouteModel> routes) {
+        Set<String> routeIds = trips.stream()
+                .map(TripModel::getRouteId)
+                .collect(Collectors.toSet());
 
-        List<StopTimeModel> absoluteTimes = TimesUtil.getAbsoluteTimes(stopTimes);
-        List<Long> relativeTimes = TimesUtil.getRelativeTimes(absoluteTimes);
-        for (StopTimeModel at : absoluteTimes) {
-            System.out.println("Stop Times until two hours after current time:" + at.getArrivalTime());
-        }
-        for (Long rt : relativeTimes) {
-            System.out.println("Stop Times until two hours after current time:" + rt);
-        }
+        return routes.stream()
+                .filter(route -> routeIds.contains(route.getRouteId()))
+                .collect(Collectors.toList());
+    }
 
-
-
+    private void printSchedule(List<RouteModel> routes, List<StopTimeModel> stopTimes, List<TripModel> trips) {
+        routes.forEach(route -> {
+            System.out.print(route.getRouteName() + " : ");
+            stopTimes.stream()
+                    .filter(st -> trips.stream()
+                            .anyMatch(trip -> trip.getTripId().equals(st.getTripId()) && trip.getRouteId().equals(route.getRouteId())))
+                    .sorted((st1, st2) -> {
+                        // Sort by arrival time
+                        LocalTime time1 = TimesUtil.parseArrivalTime(st1.getArrivalTime());
+                        LocalTime time2 = TimesUtil.parseArrivalTime(st2.getArrivalTime());
+                        return time1.compareTo(time2); // Ascending order
+                    })
+                    .forEach(st -> {
+                        LocalTime stopTime = TimesUtil.parseArrivalTime(st.getArrivalTime());
+                        if (stopTime != null) {
+                            System.out.print(stopTime.format(java.time.format.DateTimeFormatter.ofPattern("HH:mm")) + "  ");
+                        }
+                    });
+            System.out.println();
+        });
     }
 }
